[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/file_system/FileSystem.tscn" type="PackedScene" id=1]
[ext_resource path="res://ship/Ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/console/Console.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/screen/Screen.gd" type="Script" id=4]
[ext_resource path="res://ui/window/Window.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/window/Window.gd" type="Script" id=6]

[node name="Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopSection" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelTopLeft" type="Control" parent="VBoxContainer/TopSection"]
margin_right = 510.0
margin_bottom = 298.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConsoleWindow" parent="VBoxContainer/TopSection/PanelTopLeft" instance=ExtResource( 5 )]
focus_mode = 2
view_scene_path = "res://ui/console/Console.tscn"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopSection/PanelTopLeft/ConsoleWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" parent="VBoxContainer/TopSection/PanelTopLeft/ConsoleWindow/MarginContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 288.0

[node name="PanelTopRight" type="Control" parent="VBoxContainer/TopSection"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 298.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RobotWindow" parent="VBoxContainer/TopSection/PanelTopRight" instance=ExtResource( 5 )]
focus_mode = 2
view_scene_path = "res://ship/Ship.tscn"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopSection/PanelTopRight/RobotWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/TopSection/PanelTopRight/RobotWindow/MarginContainer"]
margin_right = 500.0
margin_bottom = 288.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="VBoxContainer/TopSection/PanelTopRight/RobotWindow/MarginContainer/ViewportContainer"]
size = Vector2( 500, 288 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Ship" parent="VBoxContainer/TopSection/PanelTopRight/RobotWindow/MarginContainer/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="BottomSection" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelBottomLeft" type="Control" parent="VBoxContainer/BottomSection"]
margin_right = 510.0
margin_bottom = 298.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileSystemWindow" parent="VBoxContainer/BottomSection/PanelBottomLeft" instance=ExtResource( 5 )]
focus_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomSection/PanelBottomLeft/FileSystemWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileSystem" parent="VBoxContainer/BottomSection/PanelBottomLeft/FileSystemWindow/MarginContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 288.0
input_pass_on_modal_close_click = false

[node name="PanelBottomRight" type="Control" parent="VBoxContainer/BottomSection"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 298.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenWindow" type="Panel" parent="VBoxContainer/BottomSection/PanelBottomRight"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomSection/PanelBottomRight/ScreenWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="VBoxContainer/TopSection/PanelTopLeft/ConsoleWindow" to="VBoxContainer/TopSection/PanelTopLeft/ConsoleWindow/MarginContainer/Console" method="_on_ConsoleWindow_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/TopSection/PanelTopLeft/ConsoleWindow" to="VBoxContainer/TopSection/PanelTopLeft/ConsoleWindow/MarginContainer/Console" method="_on_ConsoleWindow_focus_exited"]
[connection signal="focus_entered" from="VBoxContainer/BottomSection/PanelBottomLeft/FileSystemWindow" to="VBoxContainer/BottomSection/PanelBottomLeft/FileSystemWindow/MarginContainer/FileSystem" method="_on_FileSystemWindow_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/BottomSection/PanelBottomLeft/FileSystemWindow" to="VBoxContainer/BottomSection/PanelBottomLeft/FileSystemWindow/MarginContainer/FileSystem" method="_on_FileSystemWindow_focus_exited"]
